@@ -196,6 +196,8 @@ set of $\ZZ[G]$-generators $(g_i)$ of $\Delta$.\hfil\break
 \li{the weight $k$}{msgetweight$(M)$}
 \li{the sign $\varepsilon$}{msgetsign$(M)$}
 \li{Farey symbol attached to $G$}{mspolygon$(M)$}
+\li{\dots attached to $H < G$}{msfarey$(F, inH)$}
+\li{$H\backslash G$ and right $G$-action}{mscosets$(genG, inH)$}
 \smallskip
 
 \li{$\ZZ[G]$-generators $(g_i)$ and relations for $\Delta$}{mspathgens$(M)$}
