@@ -90,6 +90,7 @@ HC  23- direct formulas for quadratic Dirichlet L-functions at integers
     25- [libpari] lfunquadneg
 BA  26- [libpari] vecvecsmall_sort_inplace, Flx_Fl_sub
 BA  27- [libpari] groupelts_quotient, quotient_groupelts, groupelts_to_group
+    28- new GP functions mscosets, msfarey
 
   Removed
      1- obsolete function rootsof1_kannan: use nfrootsof1
